--- a/src/plugins/meson.build
+++ b/src/plugins/meson.build
@@ -43,6 +43,13 @@ if hf3fs_lib_found.found()
     subdir('hf3fs')
 endif
 
+gusli_lib_path = '/usr/lib/'
+gusli_lib_file = 'gusli_clnt'
+gusli_lib_found = cc.find_library(gusli_lib_file, dirs: [gusli_lib_path], required: false)
+if gusli_lib_found.found()
+    subdir('gusli')
+endif
+
 if cuda_dep.found() and doca_gpunetio_dep.found()
     subdir('gpunetio')
 endif
