--- a/contrib/Dockerfile
+++ b/contrib/Dockerfile
@@ -126,6 +126,9 @@ RUN cd /usr/local/src && \
      make -j install-strip &&        \
      ldconfig
 
+RUN git clone ssh://git@gitlab-master.nvidia.com:12051/excelero/gusli.git && \
+     cd gusli; make all BUILD_RELEASE=1 BUILD_FOR_UNITEST=0 \
+     ldconfig
 
 RUN rm -rf build && \
     mkdir build && \
