Fix Mason build
Remove: /usr/include and add optional dependency on uring

Change-Id: I970e840c5adace9d0cf4549bde5c9b707a972457
Signed-off-by: danielhsh <DanielHe@nvidia.com>

--- a/src/plugins/gusli/meson.build
+++ b/src/plugins/gusli/meson.build
@@ -13,32 +13,40 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
-# Use the gusli_lib_path from parent meson.build
-gusli_inc_path = '/usr/include'
-gusli_dep = declare_dependency(
-  link_args : ['-L' + gusli_lib_path, '-l' + gusli_lib_file],
-  include_directories : include_directories(gusli_inc_path))
-
-# Get Abseil dependencies
-absl_log_dep = dependency('absl_log', required: true)
+# Mandatory dependencies
 cpp_sources = ['gusli_plugin.cpp', 'gusli_backend.cpp', 'gusli_backend.h']
+plugin_deps = [ nixl_infra,
+                declare_dependency(link_args : ['-l' + gusli_lib_file]),
+                dependency('absl_log', required: true)]
+
+# Try to find liburing (optional dependency)
+uring_dep = dependency('liburing', required: false)
+have_uring = uring_dep.found()
+plugin_link_args = []
+if have_uring
+    compile_defs += ['-DHAVE_LIBURING']
+    plugin_deps += [uring_dep]
+    plugin_link_args = ['-luring']
+    message('liburing found, gusli may use io_uring')
+endif
 
 if 'GUSLI' in static_plugins
   gusli_backend_lib = static_library('GUSLI', cpp_sources,
-                    dependencies: [nixl_infra, gusli_dep, absl_log_dep],
-                    include_directories: [nixl_inc_dirs, utils_inc_dirs],
-                    install: false,
-                    cpp_args : compile_flags,
-                    name_prefix: 'libplugin_')  # Custom prefix for plugin libraries
+        dependencies: plugin_deps,
+        link_args: plugin_link_args,
+        include_directories: [nixl_inc_dirs, utils_inc_dirs],
+        install: false,
+        cpp_args: compile_defs + compile_flags,
+        name_prefix: 'libplugin_')  # Custom prefix for plugin libraries
 else
   gusli_backend_lib = shared_library('GUSLI', cpp_sources,
-                    dependencies: [nixl_infra, gusli_dep, absl_log_dep],
-                    include_directories: [nixl_inc_dirs, utils_inc_dirs],
-                    install: true,
-                    cpp_args : ['-fPIC'],
-                    name_prefix: 'libplugin_',  # Custom prefix for plugin libraries
-                    install_dir: plugin_install_dir)
+        dependencies: plugin_deps,
+        link_args: plugin_link_args,
+        include_directories: [nixl_inc_dirs, utils_inc_dirs],
+        install: true,
+        cpp_args: compile_defs + ['-fPIC'],
+        name_prefix: 'libplugin_',  # Custom prefix for plugin libraries
+        install_dir: plugin_install_dir)
   if get_option('buildtype') == 'debug'
         run_command('sh', '-c',
                     'echo "GUSLI=' + gusli_backend_lib.full_path() + '" >> ' + plugin_build_dir + '/pluginlist',
