Disable nvidia gusli dependency
Change-Id: I3a504b45f8be146687dbd6863139d80b8b88297b
Signed-off-by: danielhsh <DanielHe@nvidia.com>

--- a/contrib/Dockerfile
+++ b/contrib/Dockerfile
@@ -126,9 +126,7 @@ RUN cd /usr/local/src && \
      make -j install-strip &&        \
      ldconfig
 
-RUN git clone ssh://git@gitlab-master.nvidia.com:12051/excelero/gusli.git && \
-     cd gusli; make all BUILD_RELEASE=1 BUILD_FOR_UNITEST=0 \
-     ldconfig
+#RUN git clone ssh://git@gitlab-master.nvidia.com:12051/excelero/gusli.git && cd gusli && make all BUILD_RELEASE=1 BUILD_FOR_UNITEST=0 ALLOW_USE_URING=0 && cd ..
 
 RUN rm -rf build && \
     mkdir build && \
